Opened 9 years ago

Closed 9 years ago

#6721 closed defect (fixed)

ffplay fails to initialize audio output on with SDL 2.0.6

Reported by: James Owned by: Marton Balint
Priority: normal Component: ffplay
Version: git-master Keywords: sdl
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

$ ./ffplay -i pcm.wav

ffplay version N-87742-g7ef4d18c09 Copyright (c) 2003-2017 the FFmpeg developers
  built with gcc 7.2.0 (Rev1, Built by MSYS2 project)
  configuration: --enable-gpl --enable-nonfree --enable-libfdk-aac --enable-libmp3lame --enable-libopus --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libx265 --enable-libwebp --cpu=haswell --extra-cflags='-D_WIN32_WINNT=0x0602' --cc='ccache gcc' --x86asmexe=yasm --samples=../samples --prefix=/mingw64
  libavutil      55. 77.101 / 55. 77.101
  libavcodec     57.106.104 / 57.106.104
  libavformat    57. 82.102 / 57. 82.102
  libavdevice    57.  9.101 / 57.  9.101
  libavfilter     6.106.100 /  6.106.100
  libswscale      4.  7.103 /  4.  7.103
  libswresample   2.  8.100 /  2.  8.100
  libpostproc    54.  6.100 / 54.  6.100
Input #0, wav, from 'pcm.wav':KB sq=    0B f=0/0
  Duration: 00:00:22.80, bitrate: 1411 kb/s
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 44100 Hz, 2 channels, s16, 1411 kb/s
SDL advised audio format 33056 is not supported!
Failed to open file 'pcm.wav' or configure filtergraph
    nan    :  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B f=0/0

Format "33056" is, according to the SDL2 header, f32 output. ffplay seems to expect it to be s16, which is the case with SDL 2.0.5

Tested on Windows only (Mingw-w64 build). No idea if it happens on other targets as well since i can't test.

Change History (8)

comment:1 by llogan, 9 years ago

Was not able to duplicate this on Linux using SDL 2.0.6 unless I did something wrong.

$ ./ffplay -i pcm.wav 
ffplay version N-87798-g58143b15ad Copyright (c) 2003-2017 the FFmpeg developers
  built with gcc 7.2.0 (GCC)
  configuration: 
  libavutil      55. 79.100 / 55. 79.100
  libavcodec     57.108.100 / 57.108.100
  libavformat    57. 84.100 / 57. 84.100
  libavdevice    57. 11.100 / 57. 11.100
  libavfilter     6.108.100 /  6.108.100
  libswscale      4.  9.100 /  4.  9.100
  libswresample   2. 10.100 /  2. 10.100
Input #0, wav, from 'pcm.wav':=    0KB vq=    0KB sq=    0B f=0/0   
  Metadata:
    encoder         : Lavf57.71.100
  Duration: 00:00:22.80, bitrate: 1411 kb/s
    Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 44100 Hz, 2 channels, s16, 1411 kb/s
  64.60 M-A:  0.000 fd=   0 aq=    0KB vq=    0KB sq=    0B f=0/0

comment:2 by James, 9 years ago

No, this could very well be a SDL problem on Windows only.

comment:3 by Martin Carlsen, 9 years ago

I have the same issue on Windows 10. Do you have any solutions?

./ffplay -fflags nobuffer rtmp://<hidden>
ffplay version N-88042-g72c3d9ae45 Copyright (c) 2003-2017 the FFmpeg developers

built with gcc 7.2.0 (GCC)
configuration: --disable-static --enable-shared --enable-gpl --enable-version3 --enable-sdl2 --enable-bzlib --enable-fontconfig --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libfreetype --enable-libmp3lame --enable-libopenjpeg --enable-libopus --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libtheora --enable-libtwolame --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libzimg --enable-lzma --enable-zlib --enable-gmp --enable-libvidstab --enable-libvorbis --enable-cuda --enable-cuvid --enable-d3d11va --enable-nvenc --enable-dxva2 --enable-avisynth --enable-libmfx
libavutil 56. 0.100 / 56. 0.100
libavcodec 58. 0.100 / 58. 0.100
libavformat 58. 0.100 / 58. 0.100
libavdevice 58. 0.100 / 58. 0.100
libavfilter 7. 0.100 / 7. 0.100
libswscale 5. 0.100 / 5. 0.100
libswresample 3. 0.100 / 3. 0.100
libpostproc 55. 0.100 / 55. 0.100

Input #0, flv, from 'rtmp://<hidden>':/0

Metadata:

Server : NGINX RTMP (github.com/arut/nginx-rtmp-module)
displayWidth : 1920
displayHeight : 1080
fps : 30
profile :
level :

Duration: 00:00:00.00, start: 56.383000, bitrate: N/A

Stream #0:0: Audio: aac (LC), 48000 Hz, stereo, fltp, 131 kb/s
Stream #0:1: Video: h264 (High), yuv420p(progressive), 1920x1080, 3584 kb/s, 30 fps, 30 tbr, 1k tbn, 60 tbc

SDL advised audio format 33056 is not supported!

99.01 M-V: 0.003 fd= 9 aq= 0KB vq= 0KB sq= 0B f=0/0

Last edited 9 years ago by Martin Carlsen (previous) (diff)

comment:4 by Marton Balint, 9 years ago

Owner: set to Marton Balint
Status: newopen

comment:6 by James, 9 years ago

As mentioned in that thread, it seems to work.

comment:7 by Carl Eugen Hoyos, 9 years ago

Should be fixed by Marton in d68a557df4937b695a5f6a14877d92647be95aaa

comment:8 by Carl Eugen Hoyos, 9 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.